2012-12-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* *: More renames of 'Axiom' to 'FriCAS'.

2012-12-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/scripts/norm-out:  Clean up.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/trace.boot:  Fix untrace.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot, src/interp/parsing.lisp,
	src/interp/scwrap2.boot:  Better error messages
	from Spad parser.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot:  Simplify parser.
	src/interp/bootlex.lisp:  Remove.
	src/interp/Makefile.in:  Adjust.

2012-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matrix.spad.pamphlet,
	src/algebra/matfuns.spad.pamphlet: Speed up matrix
	operations.

2012-11-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/primitives.lisp, src/interp/i-coerce.boot,
	src/interp/i-coerfn.boot,
	src/algebra/array2.spad.pamphlet,
	src/algebra/matrix.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet: Use true 2-dimensional
	arrays.

2012-11-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/amodgcd.spad.pamphlet:  Fix wrong comparison
	of degrees.

2012-11-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/interp/scan.boot,
	src/interp/bootlex.lisp, src/interp/parsing.lisp,
	src/interp/macros.lisp, src/interp/category.boot,
	src/interp/scwrap2.boot, src/interp/postpar.boot,
	src/interp/property.lisp, src/interp/parse.boot,
	src/interp/ncomp.boot:  Misc cleanups.

2012-11-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot:  Turn 'generate' into a keyword.
	src/algebra/ssolve.spad.pamphlet,
	src/algebra/fnla.spad.pamphlet,
	src/algebra/distro.spad.pamphlet,
	src/algebra/ituple.spad.pamphlet,
	src/algebra/seg.spad.pamphlet,
	src/algebra/mantepse.spad.pamphlet,
	src/algebra/stream.spad.pamphlet,
	src/algebra/rec.spad.pamphlet,
	src/algebra/sttaylor.spad.pamphlet,